BisonSymbolTableIntro/grammar.output
Grammar

    0 $accept: compilation_unit $end

    1 compilation_unit: declarations statements
    2                 | statements
    3                 | declarations

    4 declarations: declaration
    5             | declarations declaration

    6 statements: statement
    7           | statements statement

    8 declaration: function_definition
    9            | variable_declaration

   10 function_definition: type_specifier IDENTIFIER '(' param_list ')' compound_statement
   11                    | type_specifier IDENTIFIER '(' ')' compound_statement

   12 param_list: IDENTIFIER
   13           | param_list ',' IDENTIFIER

   14 variable_declaration: type_specifier declarators SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID
   18               | CHAR

   19 declarators: direct_declarator
   20            | direct_declarator '=' expression
   21            | declarators ',' direct_declarator

   22 direct_declarator: IDENTIFIER
   23                  | direct_declarator '[' ']'

   24 statement: expression_statement
   25          | compound_statement
   26          | iteration_statement
   27          | selection_statement
   28          | jump_statement

   29 expression_statement: expression SEMICOLON
   30                     | SEMICOLON

   31 compound_statement: '{' statements '}'
   32                   | '{' '}'

   33 iteration_statement: WHILE '(' expression ')' statement
   34                    | FOR '(' expression_statement expression_statement expression ')' statement
   35                    | FOR '(' expression_statement expression_statement ')' statement
   36                    | DO statement WHILE '(' expression ')' SEMICOLON

   37 selection_statement: IF '(' expression ')' statement ELSE statement
   38                    | IF '(' expression ')' statement

   39 jump_statement: RETURN expression SEMICOLON
   40               | RETURN SEMICOLON
   41               | BREAK SEMICOLON
   42               | CONTINUE SEMICOLON

   43 expression: NUMBER
   44           | IDENTIFIER
   45           | '(' expression ')'
   46           | IDENTIFIER '(' ')'
   47           | IDENTIFIER '(' args ')'
   48           | expression '+' expression
   49           | expression '-' expression
   50           | expression '*' expression
   51           | expression '/' expression
   52           | expression '%' expression
   53           | '-' expression
   54           | '+' expression
   55           | expression FDIV expression
   56           | expression INCREMENT
   57           | expression DECREMENT
   58           | expression '^' expression
   59           | expression LAND expression
   60           | expression LOR expression
   61           | LNOT expression
   62           | expression EQ expression
   63           | expression NEQ expression
   64           | expression LT expression
   65           | expression LTE expression
   66           | expression GT expression
   67           | expression GTE expression
   68           | expression BITAND expression
   69           | expression BITOR expression
   70           | expression BITXOR expression
   71           | expression LSHIFT expression
   72           | expression RSHIFT expression
   73           | BNOT expression
   74           | IDENTIFIER '=' expression

   75 args: expression
   76     | args ',' expression


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 52
    '(' (40) 10 11 33 34 35 36 37 38 45 46 47
    ')' (41) 10 11 33 34 35 36 37 38 45 46 47
    '*' (42) 50
    '+' (43) 48 54
    ',' (44) 13 21 76
    '-' (45) 49 53
    '/' (47) 51
    '=' (61) 20 74
    '[' (91) 23
    ']' (93) 23
    '^' (94) 58
    '{' (123) 31 32
    '}' (125) 31 32
    error (256)
    NUMBER <node> (258) 43
    IDENTIFIER <node> (259) 10 11 12 13 22 44 46 47 74
    SEMICOLON (260) 14 29 30 36 39 40 41 42
    FLOAT (261) 16
    INT (262) 15
    VOID (263) 17
    CHAR (264) 18
    IF (265) 37 38
    ELSE (266) 37
    WHILE (267) 33 36
    RETURN (268) 39 40
    FOR (269) 34 35
    DO (270) 36
    BREAK (271) 41
    CONTINUE (272) 42
    LOR (273) 60
    LAND (274) 59
    BITOR (275) 69
    BITXOR (276) 70
    BITAND (277) 68
    EQ (278) 62
    NEQ (279) 63
    LT (280) 64
    LTE (281) 65
    GT (282) 66
    GTE (283) 67
    LSHIFT (284) 71
    RSHIFT (285) 72
    FDIV (286) 55
    INCREMENT (287) 56
    DECREMENT (288) 57
    LNOT (289) 61
    BNOT (290) 73
    LOWIF (291)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    compilation_unit <node> (52)
        on left: 1 2 3
        on right: 0
    declarations <node> (53)
        on left: 4 5
        on right: 1 3 5
    statements <node> (54)
        on left: 6 7
        on right: 1 2 7 31
    declaration <node> (55)
        on left: 8 9
        on right: 4 5
    function_definition <node> (56)
        on left: 10 11
        on right: 8
    param_list <node> (57)
        on left: 12 13
        on right: 10 13
    variable_declaration <node> (58)
        on left: 14
        on right: 9
    type_specifier <node> (59)
        on left: 15 16 17 18
        on right: 10 11 14
    declarators <node> (60)
        on left: 19 20 21
        on right: 14 21
    direct_declarator <node> (61)
        on left: 22 23
        on right: 19 20 21 23
    statement <node> (62)
        on left: 24 25 26 27 28
        on right: 6 7 33 34 35 36 37 38
    expression_statement <node> (63)
        on left: 29 30
        on right: 24 34 35
    compound_statement <node> (64)
        on left: 31 32
        on right: 10 11 25
    iteration_statement <node> (65)
        on left: 33 34 35 36
        on right: 26
    selection_statement (66)
        on left: 37 38
        on right: 27
    jump_statement (67)
        on left: 39 40 41 42
        on right: 28
    expression <node> (68)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 20 29 33 34 36 37 38 39 45 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    args <node> (69)
        on left: 75 76
        on right: 47 76


State 0

    0 $accept: . compilation_unit $end

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    FLOAT       shift, and go to state 4
    INT         shift, and go to state 5
    VOID        shift, and go to state 6
    CHAR        shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    FOR         shift, and go to state 11
    DO          shift, and go to state 12
    BREAK       shift, and go to state 13
    CONTINUE    shift, and go to state 14
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    '{'         shift, and go to state 20

    compilation_unit      go to state 21
    declarations          go to state 22
    statements            go to state 23
    declaration           go to state 24
    function_definition   go to state 25
    variable_declaration  go to state 26
    type_specifier        go to state 27
    statement             go to state 28
    expression_statement  go to state 29
    compound_statement    go to state 30
    iteration_statement   go to state 31
    selection_statement   go to state 32
    jump_statement        go to state 33
    expression            go to state 34


State 1

   43 expression: NUMBER .

    $default  reduce using rule 43 (expression)


State 2

   44 expression: IDENTIFIER .
   46           | IDENTIFIER . '(' ')'
   47           | IDENTIFIER . '(' args ')'
   74           | IDENTIFIER . '=' expression

    '='  shift, and go to state 35
    '('  shift, and go to state 36

    $default  reduce using rule 44 (expression)


State 3

   30 expression_statement: SEMICOLON .

    $default  reduce using rule 30 (expression_statement)


State 4

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 5

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 6

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 7

   18 type_specifier: CHAR .

    $default  reduce using rule 18 (type_specifier)


State 8

   37 selection_statement: IF . '(' expression ')' statement ELSE statement
   38                    | IF . '(' expression ')' statement

    '('  shift, and go to state 37


State 9

   33 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 38


State 10

   39 jump_statement: RETURN . expression SEMICOLON
   40               | RETURN . SEMICOLON

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 39
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 40


State 11

   34 iteration_statement: FOR . '(' expression_statement expression_statement expression ')' statement
   35                    | FOR . '(' expression_statement expression_statement ')' statement

    '('  shift, and go to state 41


State 12

   36 iteration_statement: DO . statement WHILE '(' expression ')' SEMICOLON

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    FOR         shift, and go to state 11
    DO          shift, and go to state 12
    BREAK       shift, and go to state 13
    CONTINUE    shift, and go to state 14
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    '{'         shift, and go to state 20

    statement             go to state 42
    expression_statement  go to state 29
    compound_statement    go to state 30
    iteration_statement   go to state 31
    selection_statement   go to state 32
    jump_statement        go to state 33
    expression            go to state 34


State 13

   41 jump_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 43


State 14

   42 jump_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 44


State 15

   61 expression: LNOT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 45


State 16

   73 expression: BNOT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 46


State 17

   54 expression: '+' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 47


State 18

   53 expression: '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 48


State 19

   45 expression: '(' . expression ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 49


State 20

   31 compound_statement: '{' . statements '}'
   32                   | '{' . '}'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    FOR         shift, and go to state 11
    DO          shift, and go to state 12
    BREAK       shift, and go to state 13
    CONTINUE    shift, and go to state 14
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    '{'         shift, and go to state 20
    '}'         shift, and go to state 50

    statements            go to state 51
    statement             go to state 28
    expression_statement  go to state 29
    compound_statement    go to state 30
    iteration_statement   go to state 31
    selection_statement   go to state 32
    jump_statement        go to state 33
    expression            go to state 34


State 21

    0 $accept: compilation_unit . $end

    $end  shift, and go to state 52


State 22

    1 compilation_unit: declarations . statements
    3                 | declarations .
    5 declarations: declarations . declaration

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    FLOAT       shift, and go to state 4
    INT         shift, and go to state 5
    VOID        shift, and go to state 6
    CHAR        shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    FOR         shift, and go to state 11
    DO          shift, and go to state 12
    BREAK       shift, and go to state 13
    CONTINUE    shift, and go to state 14
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    '{'         shift, and go to state 20

    $default  reduce using rule 3 (compilation_unit)

    statements            go to state 53
    declaration           go to state 54
    function_definition   go to state 25
    variable_declaration  go to state 26
    type_specifier        go to state 27
    statement             go to state 28
    expression_statement  go to state 29
    compound_statement    go to state 30
    iteration_statement   go to state 31
    selection_statement   go to state 32
    jump_statement        go to state 33
    expression            go to state 34


State 23

    2 compilation_unit: statements .
    7 statements: statements . statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    FOR         shift, and go to state 11
    DO          shift, and go to state 12
    BREAK       shift, and go to state 13
    CONTINUE    shift, and go to state 14
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    '{'         shift, and go to state 20

    $default  reduce using rule 2 (compilation_unit)

    statement             go to state 55
    expression_statement  go to state 29
    compound_statement    go to state 30
    iteration_statement   go to state 31
    selection_statement   go to state 32
    jump_statement        go to state 33
    expression            go to state 34


State 24

    4 declarations: declaration .

    $default  reduce using rule 4 (declarations)


State 25

    8 declaration: function_definition .

    $default  reduce using rule 8 (declaration)


State 26

    9 declaration: variable_declaration .

    $default  reduce using rule 9 (declaration)


State 27

   10 function_definition: type_specifier . IDENTIFIER '(' param_list ')' compound_statement
   11                    | type_specifier . IDENTIFIER '(' ')' compound_statement
   14 variable_declaration: type_specifier . declarators SEMICOLON

    IDENTIFIER  shift, and go to state 56

    declarators        go to state 57
    direct_declarator  go to state 58


State 28

    6 statements: statement .

    $default  reduce using rule 6 (statements)


State 29

   24 statement: expression_statement .

    $default  reduce using rule 24 (statement)


State 30

   25 statement: compound_statement .

    $default  reduce using rule 25 (statement)


State 31

   26 statement: iteration_statement .

    $default  reduce using rule 26 (statement)


State 32

   27 statement: selection_statement .

    $default  reduce using rule 27 (statement)


State 33

   28 statement: jump_statement .

    $default  reduce using rule 28 (statement)


State 34

   29 expression_statement: expression . SEMICOLON
   48 expression: expression . '+' expression
   49           | expression . '-' expression
   50           | expression . '*' expression
   51           | expression . '/' expression
   52           | expression . '%' expression
   55           | expression . FDIV expression
   56           | expression . INCREMENT
   57           | expression . DECREMENT
   58           | expression . '^' expression
   59           | expression . LAND expression
   60           | expression . LOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . GT expression
   67           | expression . GTE expression
   68           | expression . BITAND expression
   69           | expression . BITOR expression
   70           | expression . BITXOR expression
   71           | expression . LSHIFT expression
   72           | expression . RSHIFT expression

    SEMICOLON  shift, and go to state 59
    LOR        shift, and go to state 60
    LAND       shift, and go to state 61
    BITOR      shift, and go to state 62
    BITXOR     shift, and go to state 63
    BITAND     shift, and go to state 64
    EQ         shift, and go to state 65
    NEQ        shift, and go to state 66
    LT         shift, and go to state 67
    LTE        shift, and go to state 68
    GT         shift, and go to state 69
    GTE        shift, and go to state 70
    LSHIFT     shift, and go to state 71
    RSHIFT     shift, and go to state 72
    FDIV       shift, and go to state 73
    INCREMENT  shift, and go to state 74
    DECREMENT  shift, and go to state 75
    '+'        shift, and go to state 76
    '-'        shift, and go to state 77
    '*'        shift, and go to state 78
    '/'        shift, and go to state 79
    '%'        shift, and go to state 80
    '^'        shift, and go to state 81


State 35

   74 expression: IDENTIFIER '=' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 82


State 36

   46 expression: IDENTIFIER '(' . ')'
   47           | IDENTIFIER '(' . args ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    ')'         shift, and go to state 83

    expression  go to state 84
    args        go to state 85


State 37

   37 selection_statement: IF '(' . expression ')' statement ELSE statement
   38                    | IF '(' . expression ')' statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 86


State 38

   33 iteration_statement: WHILE '(' . expression ')' statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 87


State 39

   40 jump_statement: RETURN SEMICOLON .

    $default  reduce using rule 40 (jump_statement)


State 40

   39 jump_statement: RETURN expression . SEMICOLON
   48 expression: expression . '+' expression
   49           | expression . '-' expression
   50           | expression . '*' expression
   51           | expression . '/' expression
   52           | expression . '%' expression
   55           | expression . FDIV expression
   56           | expression . INCREMENT
   57           | expression . DECREMENT
   58           | expression . '^' expression
   59           | expression . LAND expression
   60           | expression . LOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . GT expression
   67           | expression . GTE expression
   68           | expression . BITAND expression
   69           | expression . BITOR expression
   70           | expression . BITXOR expression
   71           | expression . LSHIFT expression
   72           | expression . RSHIFT expression

    SEMICOLON  shift, and go to state 88
    LOR        shift, and go to state 60
    LAND       shift, and go to state 61
    BITOR      shift, and go to state 62
    BITXOR     shift, and go to state 63
    BITAND     shift, and go to state 64
    EQ         shift, and go to state 65
    NEQ        shift, and go to state 66
    LT         shift, and go to state 67
    LTE        shift, and go to state 68
    GT         shift, and go to state 69
    GTE        shift, and go to state 70
    LSHIFT     shift, and go to state 71
    RSHIFT     shift, and go to state 72
    FDIV       shift, and go to state 73
    INCREMENT  shift, and go to state 74
    DECREMENT  shift, and go to state 75
    '+'        shift, and go to state 76
    '-'        shift, and go to state 77
    '*'        shift, and go to state 78
    '/'        shift, and go to state 79
    '%'        shift, and go to state 80
    '^'        shift, and go to state 81


State 41

   34 iteration_statement: FOR '(' . expression_statement expression_statement expression ')' statement
   35                    | FOR '(' . expression_statement expression_statement ')' statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression_statement  go to state 89
    expression            go to state 34


State 42

   36 iteration_statement: DO statement . WHILE '(' expression ')' SEMICOLON

    WHILE  shift, and go to state 90


State 43

   41 jump_statement: BREAK SEMICOLON .

    $default  reduce using rule 41 (jump_statement)


State 44

   42 jump_statement: CONTINUE SEMICOLON .

    $default  reduce using rule 42 (jump_statement)


State 45

   48 expression: expression . '+' expression
   49           | expression . '-' expression
   50           | expression . '*' expression
   51           | expression . '/' expression
   52           | expression . '%' expression
   55           | expression . FDIV expression
   56           | expression . INCREMENT
   57           | expression . DECREMENT
   58           | expression . '^' expression
   59           | expression . LAND expression
   60           | expression . LOR expression
   61           | LNOT expression .
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . GT expression
   67           | expression . GTE expression
   68           | expression . BITAND expression
   69           | expression . BITOR expression
   70           | expression . BITXOR expression
   71           | expression . LSHIFT expression
   72           | expression . RSHIFT expression

    INCREMENT  shift, and go to state 74
    DECREMENT  shift, and go to state 75

    $default  reduce using rule 61 (expression)


State 46

   48 expression: expression . '+' expression
   49           | expression . '-' expression
   50           | expression . '*' expression
   51           | expression . '/' expression
   52           | expression . '%' expression
   55           | expression . FDIV expression
   56           | expression . INCREMENT
   57           | expression . DECREMENT
   58           | expression . '^' expression
   59           | expression . LAND expression
   60           | expression . LOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . GT expression
   67           | expression . GTE expression
   68           | expression . BITAND expression
   69           | expression . BITOR expression
   70           | expression . BITXOR expression
   71           | expression . LSHIFT expression
   72           | expression . RSHIFT expression
   73           | BNOT expression .

    INCREMENT  shift, and go to state 74
    DECREMENT  shift, and go to state 75

    $default  reduce using rule 73 (expression)


State 47

   48 expression: expression . '+' expression
   49           | expression . '-' expression
   50           | expression . '*' expression
   51           | expression . '/' expression
   52           | expression . '%' expression
   54           | '+' expression .
   55           | expression . FDIV expression
   56           | expression . INCREMENT
   57           | expression . DECREMENT
   58           | expression . '^' expression
   59           | expression . LAND expression
   60           | expression . LOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . GT expression
   67           | expression . GTE expression
   68           | expression . BITAND expression
   69           | expression . BITOR expression
   70           | expression . BITXOR expression
   71           | expression . LSHIFT expression
   72           | expression . RSHIFT expression

    FDIV       shift, and go to state 73
    INCREMENT  shift, and go to state 74
    DECREMENT  shift, and go to state 75
    '*'        shift, and go to state 78
    '/'        shift, and go to state 79
    '%'        shift, and go to state 80
    '^'        shift, and go to state 81

    $default  reduce using rule 54 (expression)


State 48

   48 expression: expression . '+' expression
   49           | expression . '-' expression
   50           | expression . '*' expression
   51           | expression . '/' expression
   52           | expression . '%' expression
   53           | '-' expression .
   55           | expression . FDIV expression
   56           | expression . INCREMENT
   57           | expression . DECREMENT
   58           | expression . '^' expression
   59           | expression . LAND expression
   60           | expression . LOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . GT expression
   67           | expression . GTE expression
   68           | expression . BITAND expression
   69           | expression . BITOR expression
   70           | expression . BITXOR expression
   71           | expression . LSHIFT expression
   72           | expression . RSHIFT expression

    FDIV       shift, and go to state 73
    INCREMENT  shift, and go to state 74
    DECREMENT  shift, and go to state 75
    '*'        shift, and go to state 78
    '/'        shift, and go to state 79
    '%'        shift, and go to state 80
    '^'        shift, and go to state 81

    $default  reduce using rule 53 (expression)


State 49

   45 expression: '(' expression . ')'
   48           | expression . '+' expression
   49           | expression . '-' expression
   50           | expression . '*' expression
   51           | expression . '/' expression
   52           | expression . '%' expression
   55           | expression . FDIV expression
   56           | expression . INCREMENT
   57           | expression . DECREMENT
   58           | expression . '^' expression
   59           | expression . LAND expression
   60           | expression . LOR expression
   62           | expression . EQ expression
   63           | expression . NEQ expression
   64           | expression . LT expression
   65           | expression . LTE expression
   66           | expression . GT expression
   67           | expression . GTE expression
   68           | expression . BITAND expression
   69           | expression . BITOR expression
   70           | expression . BITXOR expression
   71           | expression . LSHIFT expression
   72           | expression . RSHIFT expression

    LOR        shift, and go to state 60
    LAND       shift, and go to state 61
    BITOR      shift, and go to state 62
    BITXOR     shift, and go to state 63
    BITAND     shift, and go to state 64
    EQ         shift, and go to state 65
    NEQ        shift, and go to state 66
    LT         shift, and go to state 67
    LTE        shift, and go to state 68
    GT         shift, and go to state 69
    GTE        shift, and go to state 70
    LSHIFT     shift, and go to state 71
    RSHIFT     shift, and go to state 72
    FDIV       shift, and go to state 73
    INCREMENT  shift, and go to state 74
    DECREMENT  shift, and go to state 75
    '+'        shift, and go to state 76
    '-'        shift, and go to state 77
    '*'        shift, and go to state 78
    '/'        shift, and go to state 79
    '%'        shift, and go to state 80
    '^'        shift, and go to state 81
    ')'        shift, and go to state 91


State 50

   32 compound_statement: '{' '}' .

    $default  reduce using rule 32 (compound_statement)


State 51

    7 statements: statements . statement
   31 compound_statement: '{' statements . '}'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    FOR         shift, and go to state 11
    DO          shift, and go to state 12
    BREAK       shift, and go to state 13
    CONTINUE    shift, and go to state 14
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    '{'         shift, and go to state 20
    '}'         shift, and go to state 92

    statement             go to state 55
    expression_statement  go to state 29
    compound_statement    go to state 30
    iteration_statement   go to state 31
    selection_statement   go to state 32
    jump_statement        go to state 33
    expression            go to state 34


State 52

    0 $accept: compilation_unit $end .

    $default  accept


State 53

    1 compilation_unit: declarations statements .
    7 statements: statements . statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    SEMICOLON   shift, and go to state 3
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    FOR         shift, and go to state 11
    DO          shift, and go to state 12
    BREAK       shift, and go to state 13
    CONTINUE    shift, and go to state 14
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19
    '{'         shift, and go to state 20

    $default  reduce using rule 1 (compilation_unit)

    statement             go to state 55
    expression_statement  go to state 29
    compound_statement    go to state 30
    iteration_statement   go to state 31
    selection_statement   go to state 32
    jump_statement        go to state 33
    expression            go to state 34


State 54

    5 declarations: declarations declaration .

    $default  reduce using rule 5 (declarations)


State 55

    7 statements: statements statement .

    $default  reduce using rule 7 (statements)


State 56

   10 function_definition: type_specifier IDENTIFIER . '(' param_list ')' compound_statement
   11                    | type_specifier IDENTIFIER . '(' ')' compound_statement
   22 direct_declarator: IDENTIFIER .

    '('  shift, and go to state 93

    $default  reduce using rule 22 (direct_declarator)


State 57

   14 variable_declaration: type_specifier declarators . SEMICOLON
   21 declarators: declarators . ',' direct_declarator

    SEMICOLON  shift, and go to state 94
    ','        shift, and go to state 95


State 58

   19 declarators: direct_declarator .
   20            | direct_declarator . '=' expression
   23 direct_declarator: direct_declarator . '[' ']'

    '='  shift, and go to state 96
    '['  shift, and go to state 97

    $default  reduce using rule 19 (declarators)


State 59

   29 expression_statement: expression SEMICOLON .

    $default  reduce using rule 29 (expression_statement)


State 60

   60 expression: expression LOR . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 98


State 61

   59 expression: expression LAND . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 99


State 62

   69 expression: expression BITOR . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 100


State 63

   70 expression: expression BITXOR . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 101


State 64

   68 expression: expression BITAND . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 102


State 65

   62 expression: expression EQ . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 103


State 66

   63 expression: expression NEQ . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 104


State 67

   64 expression: expression LT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 105


State 68

   65 expression: expression LTE . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 106


State 69

   66 expression: expression GT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 107


State 70

   67 expression: expression GTE . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 108


State 71

   71 expression: expression LSHIFT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 109


State 72

   72 expression: expression RSHIFT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    LNOT        shift, and go to state 15
    BNOT        shift, and go to state 16
    '+'         shift, and go to state 17
    '-'         shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 110


State 73

   55 expression: expression FDIV . expression
